--- a/TPQR_Session2_7_9.csproj
+++ b/TPQR_Session2_7_9.csproj
@@ -55,6 +55,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddPackages.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddPackages.Designer.cs">
+      <DependentUpon>AddPackages.cs</DependentUpon>
+    </Compile>
     <Compile Include="Benefit.cs">
       <DependentUpon>Session2Model.tt</DependentUpon>
     </Compile>
@@ -123,6 +129,9 @@
     <Compile Include="ViewPackages.Designer.cs">
       <DependentUpon>ViewPackages.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddPackages.resx">
+      <DependentUpon>AddPackages.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BookSponsorship.resx">
       <DependentUpon>BookSponsorship.cs</DependentUpon>
     </EmbeddedResource>
