Completed Approve Bookings

--- a/TPQR_Session2_7_9.csproj
+++ b/TPQR_Session2_7_9.csproj
@@ -61,6 +61,12 @@
     <Compile Include="AddPackages.Designer.cs">
       <DependentUpon>AddPackages.cs</DependentUpon>
     </Compile>
+    <Compile Include="ApproveBookings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ApproveBookings.Designer.cs">
+      <DependentUpon>ApproveBookings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Benefit.cs">
       <DependentUpon>Session2Model.tt</DependentUpon>
     </Compile>
@@ -131,6 +137,9 @@
     </Compile>
     <EmbeddedResource Include="AddPackages.resx">
       <DependentUpon>AddPackages.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ApproveBookings.resx">
+      <DependentUpon>ApproveBookings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BookSponsorship.resx">
       <DependentUpon>BookSponsorship.cs</DependentUpon>
